--- a/etrl-chat/.gitignore
+++ b/etrl-chat/.gitignore
@@ -154,7 +154,7 @@ claude-flow.config.json
 .swarm/
 .hive-mind/
 .claude-flow/
-memory/
+# memory/ - REMOVED: needed for deployment
 coordination/
 memory/claude-flow-data.json
 memory/sessions/*
