--- a/etrl-chat/.gitignore
+++ b/etrl-chat/.gitignore
@@ -71,7 +71,7 @@ bower_components/
 .flooignore
 
 #config file
-librechat.yaml
+# librechat.yaml - REMOVED: needed for deployment
 librechat.yml
 
 # Environment
