--- a/etrl-chat/Dockerfile.multi
+++ b/etrl-chat/Dockerfile.multi
@@ -73,6 +73,7 @@ FROM base-min AS api-build
 COPY --from=ghcr.io/astral-sh/uv:0.6.13 /uv /uvx /bin/
 RUN uv --version
 WORKDIR /app
+COPY librechat.yaml ./librechat.yaml
 # Install only production deps
 RUN npm ci --omit=dev
 COPY api ./api
