--- a/etrl-chat/librechat.yaml
+++ b/etrl-chat/librechat.yaml
@@ -16,7 +16,7 @@ interface:
   modelSelect: false
   parameters: false
   presets: false
-  showTokens: false
+  showTokens: true
   
   sidePanel: true
   fileSearch: true
