--- a/etrl-business/package.json
+++ b/etrl-business/package.json
@@ -13,6 +13,7 @@
     "@a2seven/yoo-checkout": "^1.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.575.0",
     "mongodb": "^7.1.0",
     "next": "16.1.6",
